# realtime-claude-code-voice

./: README.md  install.sh  pyproject.toml
commands/: voice.md
scripts/: statusline-voice-segment.sh  voice-hotkey.sh  voice_capture.py  voice_check.py
src/realtime_voice/: __init__.py  audio.py  config.py  iterm.py  realtime.py  server.py  slot.py
