[project]
name = "realtime-voice-mcp"
version = "0.1.0"
description = "Voice for Claude Code over the OpenAI Realtime API — barge-in, cross-terminal audio-slot coordination, iTerm2 focus"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "websockets>=13.0",
    "sounddevice>=0.5.0",
]

[project.scripts]
realtime-voice-mcp = "realtime_voice.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realtime_voice"]
